<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fb_background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:textDirection="rtl"
        android:layoutDirection="rtl"
        android:padding="20dp"
        android:paddingTop="130dp">

        <TextView
            android:id="@+id/login_title"
            style="@style/AppTheme.DayTextViewBigTitle"
            android:text="@string/account" />

        <EditText
            android:id="@+id/userName"
            style="@style/AppTheme.DayEditText"
            android:drawableLeft="@android:drawable/stat_sys_vp_phone_call"
            android:hint="@string/mobile_number"
            android:inputType="phone" />

        <EditText
            android:id="@+id/accountName"
            style="@style/AppTheme.DayEditText"
            android:drawableLeft="@android:drawable/ic_menu_edit"
            android:hint="@string/yourName"  />

        <EditText
            android:id="@+id/accountPassword"
            style="@style/AppTheme.DayEditText"
            android:drawableLeft="@android:drawable/ic_secure"
            android:hint="@string/password"
            android:inputType="textPassword"/>


        <TextView
            android:id="@+id/textViewForgetpass"
            style="@style/AppTheme.DayTextView"
            android:visibility="gone"
            android:text="forget_password" />

        <Button
            android:id="@+id/submit"
            android:text="@string/login"
            style="@style/AppTheme.DayButton" />

        <TextView
            style="@style/AppTheme.DayTextView"
            android:text="@string/login_with" />

<!--        <com.google.android.gms.common.SignInButton-->
<!--            android:id="@+id/submitByGoogle"-->
<!--            style="@style/AppTheme.DayButton"  />-->

        <Button
            android:id="@+id/submitBySimCard"
            android:text="@string/simcart"
            style="@style/AppTheme.DayButton" />

        <TextView android:id="@+id/alreadyMember"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="5dp"
            android:gravity="center"
            style="@style/AppTheme.DayButton"
            android:text="Already a member?"/>

    </LinearLayout>
</ScrollView>

