<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/bottomSheetLayout"
    android:layout_width="match_parent"
    android:layoutDirection="rtl"
    android:gravity="top|center"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:background="@color/fb_background_color"
    app:behavior_hideable="true"
    app:behavior_peekHeight="60dp"
    app:layout_behavior="@string/bottom_sheet_behavior">


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layoutDirection="locale"
        android:orientation="vertical"
        android:padding="20dp" >

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_for_reset_password_1"  />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_for_login_by_mobile_number_2"  />
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_for_login_by_mobile_number_3"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_for_reset_password_2"  />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/text_for_reset_password_3"  />

        <Button
            android:id="@+id/accept"
            android:text="@string/accept_and_countiue"
            style="@style/AppTheme.DayButton" />

        <Button
            android:id="@+id/cancel"
            android:text="@string/cancel"
            style="@style/AppTheme.DayButton" />

        <View
            android:id="@+id/textViewChangeToDiscountCardHr"
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:layout_marginStart="10dp"
            android:visibility="gone"
            android:layout_marginEnd="10dp" />

        <View
            android:layout_marginTop="5dp"
            android:layout_width="fill_parent"
            android:layout_height="1dp"
            android:visibility="gone"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="100dp"
            android:visibility="gone"  />

    </LinearLayout>

</LinearLayout>

