<?xml version="1.0" encoding="utf-8"?>
<ScrollView
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/fb_background_color"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:android="http://schemas.android.com/apk/res/android" >

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:scrollbarAlwaysDrawVerticalTrack="true"
        android:textDirection="rtl"
        android:layoutDirection="rtl"
        android:padding="20dp"
        android:paddingTop="130dp">

        <TextView
            android:id="@+id/login_title"
            style="@style/AppTheme.DayTextViewBigTitle"
            android:text="@string/changePassword" />

        <EditText
            android:id="@+id/oldPassword"
            style="@style/AppTheme.DayEditText"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:hint="@string/old_pass"  />


        <EditText
            android:id="@+id/newPassword"
            style="@style/AppTheme.DayEditText"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:hint="@string/new_pass" />

        <EditText
            android:id="@+id/accountPassword2"
            style="@style/AppTheme.DayEditText"
            android:drawableLeft="@android:drawable/ic_lock_lock"
            android:hint="@string/new_pass_2" />


        <TextView
            android:id="@+id/newPassword2"
            style="@style/AppTheme.DayTextView"
            android:visibility="gone"
            android:text="forget_password" />

        <Button
            android:id="@+id/submit"
            android:text="@string/changePassword"
            style="@style/AppTheme.DayButton" />

        <TextView
            style="@style/AppTheme.DayTextView"
            android:visibility="gone"
            android:text="@string/help" />

        <TextView
            style="@style/AppTheme.DayTextView"
            android:visibility="gone"
            android:text="@string/helpText" />

        <TextView
            android:id="@+id/forgetPasseord"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center"
            android:text="فراموشی رمزعبور"
            style="@style/AppTheme.DayButton"
            android:visibility="gone"
            android:padding="10dp"/>

    </LinearLayout>

</ScrollView>

